--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             <div class="bg-red-700 text-white text-lg font-bold px-4 py-3 flex items-center space-x-3">
                 <img src="zenith.png" alt="Z" class="w-8 h-8 rounded-full">
                 <span>Zenith Bank Chat Support</span>
+                <span class="text-sm text-gray">Adeyemi</span>
             </div>
 
             <!-- Chat Window -->
