Changes to be committed: 	modified:   public/index.html 	deleted:    public/zenith.png

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,11 @@
         <div class="w-full max-w-md bg-white shadow-xl rounded-lg overflow-hidden flex flex-col">
 
             <!-- Header -->
-            <div class="bg-red-700 text-white text-lg font-bold px-4 py-3 flex items-center space-x-3">
-                <img src="zenith.png" alt="Z" class="w-8 h-8 rounded-full">
-                <span>Zenith Bank Chat Support</span>
-                <span class="text-sm text-gray">Adeyemi</span>
+            <div class="bg-blue-500 text-white text-lg font-bold px-4 py-3 flex items-center space-x-3">
+                <div class="flex flex-col">
+                    <span>Chat Support</span>
+                    <span class="text-sm text-gray">Adeyemi adedayo</span>
+                </div>
             </div>
 
             <!-- Chat Window -->
